NavBar bug fixed on small devices

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -234,12 +234,13 @@ a {
   text-decoration: underline;
 }
 a:hover {
-  color: #0a58ca;
+  color: #fff;
+  text-decoration: underline;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
   color: inherit;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 pre,
